# sx-deprecated

./: CMakeLists.txt  lazy_code.txt  stdaux.h
main/: main.cpp
sx/: CMakeLists.txt  sx.cpp
sx/include/: sx.h
sx/include/sx/: array1.h  array2.h  dynamic_bitset.cpp  dynamic_bitset.h  eager_ops.h  index_iterator.h  macros.h  pointer_iterator.h  proxy_index_at.h  proxy_iota.h  smart_index.h  snippets_from_other_exps.h  stdabbrev.h  stdaux.h  traits.h  types.h
sx/include/sx/dynamic_bitset/: dynamic_bitset_impl.h
sx/include/sx/integer/: integer_log2.h  lowest_bit.h
